--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
